--- a/src/styles.css
+++ b/src/styles.css
@@ -1,17 +1,66 @@
 body {
-  font-family: sans-serif;
-  overflow: hidden;
+  font-family: system-ui;
+  margin: 0;
+  padding: 0;
+  position: relative;
+  box-sizing: content-box;
 }
+
 #webgi-canvas {
   width: 100%;
   height: 100%;
   border-radius: 0.5rem;
 }
-#webgi-canvas-container{
-  width: 80vw;
-  height: 80vh;
-  margin: 10vh 10vw;
-  border-radius: 0.5rem;
 
-  box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;
+#webgi-canvas-container {
+  width: 100vw;
+  height: 100vh;
+  pointer-events: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+
+#tweakpaneUiContainer {
+  display: none;
+}
+
+.nav-bar {
+  display: flex;
+  justify-content: space-between;
+  max-width: calc(100% - 40px);
+  width: 1200px;
+  padding: 20px;
+  margin: auto;
+  z-index: 10;
+}
+
+.button-bar {
+  background-color: black;
+  color: white;
+  border: none;
+  border-radius: 50px;
+  padding: 10px 30px;
+  cursor: pointer;
+  transition: .25s background-color;
+}
+
+.button-bar:hover {
+  background-color: yellowgreen;
+}
+
+section.section {
+  width: calc(100% - 40px);
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  padding: 0 20px;
+}
+
+section.section.second {
+  justify-content: flex-end;
+}
+
+h1 {
+  font-size: clamp(70px, 20vw, 170px);
 }
